<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/show_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_notification"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_big_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_big_icon"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_vibration"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_launch_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_launch_application"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_big_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_big_text_style"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_big_picture_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_big_picture_style"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_inbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_inbox_style"
        android:padding="8dp"/>
    <Button
        android:id="@+id/show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_button"
        android:padding="8dp"/>
</LinearLayout>
